# LibraryAPI

./: .dockerignore  .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0926f625ec00_init.py  361d96fff01e_add_description_field_to_books.py  3f6b3fac956a_add_all_tables.py
src/: __main__.py
src/api/: setup.py
src/api/v0/: __init__.py  container.py
src/api/v0/auth/: __init__.py  container.py  middleware.py  repository.py  schemas.py  service.py  views.py
src/api/v0/books/: container.py  repository.py  schemas.py  views.py
src/api/v0/borrows/: container.py  repository.py  schemas.py  service.py  views.py
src/api/v0/hello/: container.py  hello_repo.py  views.py
src/api/v0/hello_world/: views.py
src/api/v0/info/: container.py  repository.py  schemas.py  views.py
src/api/v0/middlewares/: session.py
src/api/v0/reader/: librarian.py
src/api/v0/readers/: container.py  repository.py  schemas.py  views.py
src/common/interfaces/: crud.py  hasher.py  repository.py
src/core/: const.py  container.py  server.py  settings.py
src/database/: setup.py
src/database/models/: base.py  book.py  borrowedbook.py  librarian.py  reader.py  token.py
src/database/models/mixins/: __init__.py  with_email.py  with_id.py  with_time.py  with_uuid.py
src/database/repositories/: crud.py
src/database/utils/: scoped.py  transactional.py
src/security/: hasher.py  jwt.py
tests/: test_borrows_service.py
