[project]
name = "libraryapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.1",
    "asyncpg>=0.30.0",
    "dependency-injector>=4.47.1",
    "fastapi[all]>=0.115.12",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.11.5",
    "pytest>=8.4.0",
    "python-jose>=3.5.0",
    "ruff>=0.11.13",
    "sqlalchemy>=2.0.41",
]
